After a bit of thrashing I think I have the templates converted into a nice way of using them inside the template engine. re #538(1)

--- a/spatweb/templates/home.html
+++ b/spatweb/templates/home.html
@@ -1,8 +1,1 @@
-<html>
-  <head>
-    <title>Welcome to S.P.A.T!</title>
-  </head>
-  <body>
-    Hello
-  </body>
-</html>
+{% extends "index.html" %}
