--- a/spatweb/templates/index.html
+++ b/spatweb/templates/index.html
@@ -3,10 +3,10 @@
 
 {%block content %}
 				<h2 id="secHeader" title="Template Title"><span></span>Template Image</h2>
-				<h3>Header One</h3>
+				<h3>About the S-Profile Analysis Tool</h3>
 				<p>Lorem ipsum dolor sit amet, <a href="">consectetuer</a> adipiscing elit. Suspendisse sit amet leo non ligula pulvinar pulvinar. Morbi non tortor. Curabitur varius tincidunt quam. Nam ultrices odio. Curabitur vitae sapien a tortor tincidunt lobortis. Donec posuere elit quis justo.</p>
 				<p>Donec posuere nibh sit amet massa. Integer tincidunt, sem dapibus pellentesque blandit, turpis eros laoreet lectus, sed sagittis velit pede et orci. Nullam in nunc non dui mattis dapibus. Mauris et justo eget ligula aliquam dictum. Integer eu sem. Curabitur vulputate nonummy enim. Fusce luctus tortor porta tortor. Maecenas fringilla commodo nibh.</p>
-				<h4>Header Two</h4>
+				<h4>Getting Started</h4>
 				<p>Maecenas in magna eget velit laoreet fringilla. In vitae dolor eget est commodo ornare. Sed felis. Sed blandit ultrices elit. Donec aliquet purus non libero. Integer blandit eros vel arcu. Sed dapibus scelerisque mi. Curabitur nec odio. Aliquam dignissim libero tempus nulla. Aliquam erat volutpat. Aliquam eu elit. Quisque leo.</p>
 				<p>Pellentesque massa libero, lobortis at, pharetra at, commodo sit amet, massa. Nam velit. Ut euismod, nisl in hendrerit suscipit, nulla urna luctus nulla, a bibendum sapien quam ac leo. Donec suscipit, dolor semper molestie laoreet, wisi felis molestie augue, eu ullamcorper eros elit vel urna. Sed luctus nisl non tortor. Vestibulum et leo vel urna vehicula rutrum.</p>
 				<ul>
