--- a/spatweb/templates/index.html
+++ b/spatweb/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}S-Profile Analysis Tool{% endblock %}
 
 {%block content %}
-				<h2 id="secHeader" title="Template Title"><span></span>Template Image</h2>
+				<h2 id="secHeader" title="S-Profile Analysis Tool Home"><span></span>S-Profile Analysis Tool Home</h2>
 				<h3>About the S-Profile Analysis Tool</h3>
 				<p>Lorem ipsum dolor sit amet, <a href="">consectetuer</a> adipiscing elit. Suspendisse sit amet leo non ligula pulvinar pulvinar. Morbi non tortor. Curabitur varius tincidunt quam. Nam ultrices odio. Curabitur vitae sapien a tortor tincidunt lobortis. Donec posuere elit quis justo.</p>
 				<p>Donec posuere nibh sit amet massa. Integer tincidunt, sem dapibus pellentesque blandit, turpis eros laoreet lectus, sed sagittis velit pede et orci. Nullam in nunc non dui mattis dapibus. Mauris et justo eget ligula aliquam dictum. Integer eu sem. Curabitur vulputate nonummy enim. Fusce luctus tortor porta tortor. Maecenas fringilla commodo nibh.</p>
