Fleshing out the run page a bit, start a library page of already run s-profiles. re Programming:#538 (1.5)

--- a/spatweb/www/_style/css/style.css
+++ b/spatweb/www/_style/css/style.css
@@ -80,14 +80,19 @@ h3,h4 {
 font-weight:400;
 }
 
-p,li {
+p,li,td {
 color:#444;
 font-size:70%;
 }
 
+th,td { padding: 3px; }
+
 ul {
 list-style:none;
 }
+
+.contentPadding { padding: 5px; }
+
 
 #content {
 background:#FFF url(../images/bg_priNav.jpg) repeat-x;
