making link to the library work

--- a/spatweb/templates/base.html
+++ b/spatweb/templates/base.html
@@ -31,7 +31,7 @@
           <ul>
 				    <li id="active">Home</li>
             <li><a href="/run">Run S-Profile Analysis</a></li>
-				    <li><a href="">S-P.A.T. Library</a></li>
+				    <li><a href="/library">S-P.A.T. Library</a></li>
             <li><a href="">Get the Source</a></li>
           </ul>
         </div>
