Some work on the templates towards getting the wizard process going
 * moved urls into the app based on https://docs.djangoproject.com/en/1.3/intro/tutorial03/#decoupling-the-urlconfs
 * More on building the form, and where it posts to.
 * making a start page that then posts to run
 * figuring out the django message queue.

re Programming:#536 (1.25), re Programming:#555 (1)

--- a/spatweb/templates/base.html
+++ b/spatweb/templates/base.html
@@ -21,6 +21,13 @@
 
 		<div id="mainContainer">
 			<div id="content">
+        {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
 
         {%block content %}
         {%endblock content %}
@@ -30,7 +37,7 @@
           <h2>Primary Navigation</h2>
           <ul>
 				    <li id="active">Home</li>
-            <li><a href="/run">Run S-Profile Analysis</a></li>
+            <li><a href="/start">Run S-Profile Analysis</a></li>
 				    <li><a href="/library">S-P.A.T. Library</a></li>
             <li><a href="">Get the Source</a></li>
           </ul>
