--- a/spatweb/templates/start.html
+++ b/spatweb/templates/start.html
@@ -10,17 +10,10 @@
     genbank data pasted directly in. Only one of the  following is neccessary</p>
 
 
-  <form action="run" method="POST" enctype="multipart/form-data">
+  <form action="start" method="POST" enctype="multipart/form-data">
     {% csrf_token %} 
     <h3>GenBank file from:</h3>
-    <p>
-      <label>file upload: <input type="file"/></label>
-    </p>
-    <p>
-      <label>url: <input type="text"/></label>
-    </p>
-    <p><label>Paste it here:<textarea name="pastein"></textarea></label>
-    </p>
+    {{ form.as_p }}
     <p><button>Start Analysis!</button></p>
   </form>
 
