--- a/spatweb/templates/run.html
+++ b/spatweb/templates/run.html
@@ -3,14 +3,23 @@
 
 {%block content %}
 <div class="contentPadding">
+  <h2>Selected Genome Info</h2>
+  <dl>
+    <dt>Filename</dt>
+    <dd>{{ filename }}</dd>
+  </dl>
+  {% if parse_successful %}
+  
+  {% else %}
+  <p>The file does not appear to be in <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">GenBank format</a>. You may attempt to procede but results are unpredicatble.</p>
+  {% endif %}
   <h2>S-Profile Analysis Tool Options</h2>
   <p>From here you can customize the options on an S-Profile analysis.</p>
 
 
   <form action="results" method="POST">
     {% csrf_token %} 
-    <p>While we will later, there isn't much customization yet.</p>
-
+    {{ form.as_p }}
     <p><button>Get Analysis!</button></p>
   </form>
 </div>
