Made good progress on library and run form re Programming:#555 (2.25)
 * library now lists everything in the library directory, parsing it (with cache)
 * run form now fills based on some data (not very much)
 * urls and redirection sorted out a bit better

--- a/spatweb/templates/run.html
+++ b/spatweb/templates/run.html
@@ -8,8 +8,9 @@
     <dt>Filename</dt>
     <dd>{{ filename }}</dd>
   </dl>
-  {% if parse_successful %}
+  {% if data.id %}
   
+
   {% else %}
   <p>The file does not appear to be in <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">GenBank format</a>. You may attempt to procede but results are unpredicatble.</p>
   {% endif %}
