--- a/spatweb/templates/library.html
+++ b/spatweb/templates/library.html
@@ -1,11 +1,18 @@
 {% extends "base.html" %}
 {% block title %}Run S-P.A.T.{% endblock %}
 
+{% load url from future %}
+
 {%block content %}
 <div class="contentPadding">
   <h2>Existing S-Profile Analyses</h2>
   <p>Here you can find already calculated s-profile analyses.</p>
   <p>
+    <ul>
+      {% for f in files %}
+      <li><a href="{{ f.url}}"> {% firstof f.id f.basename %}</a> </li>
+      {% endfor %}
+    <ul>
     <table width="100%" cellpadding="4" cellspacing="0" border="1">
       <thead>
       <tr>
