--- a/spatweb/www/_style/css/style.css
+++ b/spatweb/www/_style/css/style.css
@@ -80,7 +80,7 @@ h3,h4 {
 font-weight:400;
 }
 
-p,li,td {
+p,li,td,dd,dt {
 color:#444;
 font-size:70%;
 }
@@ -311,3 +311,7 @@ height:100%;
 position:absolute;
 width:100%;
 }
+
+
+dt { font-weight: bold; margin-top:4px;}
+dd { margin-left: 8px; }
