Got the framework for serving the results of running it.
Some places to go from here:
 * save data entered on the form so they can go back to it, and alter a parameter and rerun
 * figure out why it's segfaulting
 * fill in the apache framework around this (and the 404 punt)
 * handle cleaning up old uploads somehow

re Programming:#555 (1)

--- a/spatweb/templates/base.html
+++ b/spatweb/templates/base.html
@@ -11,7 +11,7 @@
             #secHeader span{background: url(/static/_style/images/header1.jpg)}
 			{%endblock %}
 		</style>
-
+    {%block addScript %}{%endblock %}
 </head>
 	<body>
 		<div id="header">
