Hiding the table at the bottom of the library, it might be useful laster, but right now isn't.

--- a/spatweb/templates/library.html
+++ b/spatweb/templates/library.html
@@ -16,7 +16,7 @@
       </li>
       {% endfor %}
     <ul>
-    <table width="100%" cellpadding="4" cellspacing="0" border="1">
+    <table width="100%" cellpadding="4" cellspacing="0" border="1" style="display:none;">
       <thead>
       <tr>
         <th>Organism</th>
