Making the uploading work again with the new url scheme re Programming:#555 (0.5)

--- a/spatweb/templates/run.html
+++ b/spatweb/templates/run.html
@@ -19,7 +19,9 @@
 
   <form method="POST">
     {% csrf_token %} 
-    {{ form.as_p }}
+    <table>
+    {{ form.as_table }}
+    </table>
     <p><button>Get Analysis!</button></p>
   </form>
 </div>
