--- a/spatweb/templates/run.html
+++ b/spatweb/templates/run.html
@@ -10,7 +10,7 @@
 {% endfor %}
   </dl>
 
-  {% if not data.id %}
+  {% if not parse_data.id %}
   <p>The file does not appear to be in <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">GenBank format</a>. You may attempt to procede but results are unpredicatble.</p>
   {% endif %}
   <h2>S-Profile Analysis Tool Options</h2>
