Starting to use the jquery stuff on the start form re Programming:#570 (0.25)

--- a/spatweb/templates/base.html
+++ b/spatweb/templates/base.html
@@ -9,7 +9,7 @@
 		<style type="text/css" media="screen">
 			{%block secHeaderCss %}
         #secHeader span{
-          background: url({% media_url images/header1.jpg %});
+          background: url({% media_url "images/header1.jpg" %});
         }
 			{%endblock %}
 		</style>
