Fixing some data validation and flow issues on the start page. re Programming:#569 (0.25)

--- a/spatweb/templates/start.html
+++ b/spatweb/templates/start.html
@@ -33,7 +33,9 @@
       {% endfor %}
     </div>
     <br/>
-  </form>
+    <p>
+      <a href="">Start Over</a>
+    </p>
 <!--
   <p><a href="/library">Browse the library of existing analyses</a></p>
 -->
