--- a/spatweb/www/css/style.css
+++ b/spatweb/www/css/style.css
@@ -322,7 +322,7 @@ textarea { width: 100%; }
 
 .helptext {font-size: 0.8em; float:right; }
 
- #content label { width: 15ex; float:left; text-align: right; clear:left; }
+#content label { float:left; text-align: right; clear:left; }
 #content input { margin-left: 6px; float:left; }
 
 ul.errorlist li { color:red; }
