Getting more options onto run config, making that work better.
 * significance threshold for acgt_gamma, option to make it not run.
 * start_page, end_page
 * sorting out titles somewhat.

re Programming:#574 (1)

--- a/spatweb/templates/run.html
+++ b/spatweb/templates/run.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
 
   $(function(){
+    $('button').button()
     $("tbody input + br").remove();
     $("tbody tr").each(function() {
        $("input", this).qtip({
