Fixing some template paths based on running this underneath /spat/

--- a/spatweb/templates/base.html
+++ b/spatweb/templates/base.html
@@ -39,8 +39,7 @@
           <h2>Primary Navigation</h2>
           <ul>
 				    <li id="active">Home</li>
-            <li><a href="/start">Run S-Profile Analysis</a></li>
-				    <li><a href="/library">S-P.A.T. Library</a></li>
+            <li><a href="{% url start %}">Run S-Profile Analysis</a></li>
             <li><a href="">Get the Source</a></li>
           </ul>
         </div>
