--- a/spatweb/templates/start/EntrezSearchForm.html
+++ b/spatweb/templates/start/EntrezSearchForm.html
@@ -3,7 +3,7 @@
         <h3><a name="#">{{ form.title|title }}</a></h3>
         
         <div>
-        <form method="post" action="start"
+        <form method="post" action="{% url start %}"
               {% if form.is_multipart %}
                 enctype="multipart/form-data"
               {% endif %}
@@ -14,7 +14,7 @@
             {{ form.as_p }}
           </div>
           <div style="clear:both;">
-            <button class="Start">Start Analysis!</button>
+            <button class="Start" >Start Analysis!</button>
           </div>
 
         {% if form.session and form.session.result_count > 0 %}
