Substituted Lorem ipsum

--- a/spatweb/spatweb/templates/base.html
+++ b/spatweb/spatweb/templates/base.html
@@ -52,9 +52,9 @@
 				  </ul>
 				  <h4>Related Personnel</h4>
 				  <ul>
-					  <li><a href="http://www.mgm.ufl.edu/faculty/lbrocchieri.htm">Luciano Brocchieri</a></li>
-					  <li><a href="#">Link</a>,</li>
-					  <li><a href="#">Link</a>,</li>
+					  <li><a href="http://www.mgm.ufl.edu/brocchieri/index.html">Luciano Brocchieri</a></li>
+					  <li><a href="#">Steve M. Oden</a>,</li>
+					  <li><a href="#">Eric Hernandez</a>,</li>
 				  </ul>
           {% include "_includes/search.html" %}
 			  </div>
