--- a/spatweb/spatweb/templates/base.html
+++ b/spatweb/spatweb/templates/base.html
@@ -50,11 +50,11 @@
             <li><a href="http://genome.ufl.edu/pages/index.html">genome.ufl.edu</a></li>
             <li><a href="http://www.ufgi.ufl.edu/">Genetics Institute at UF</a></li>
 				  </ul>
-				  <h4>Related Personnel</h4>
+				  <h4>People</h4>
 				  <ul>
-					  <li><a href="http://www.mgm.ufl.edu/brocchieri/index.html">Luciano Brocchieri</a></li>
-					  <li><a href="#">Steve M. Oden</a>,</li>
-					  <li><a href="#">Eric Hernandez</a>,</li>
+					  <li><a href="http://www.mgm.ufl.edu/brocchieri/index.html">Luciano Brocchieri (PI)</a></li>
+					  <li><a href="#">Steve M. Oden (Graduate student)</a></li>
+					  <li><a href="#">Eric Hernandez (Programmer) (</a></li>
 				  </ul>
           {% include "_includes/search.html" %}
 			  </div>
