More Editing of base.html

--- a/spatweb/spatweb/templates/base.html
+++ b/spatweb/spatweb/templates/base.html
@@ -54,7 +54,7 @@
 				  <ul>
 					  <li><a href="http://www.mgm.ufl.edu/brocchieri/index.html">Luciano Brocchieri (PI)</a></li>
 					  <li><a href="#">Steve M. Oden (Graduate student)</a></li>
-					  <li><a href="#">Eric Hernandez (Programmer) (</a></li>
+					  <li><a href="#">Eric Hernandez (Programmer)</a></li>
 				  </ul>
           {% include "_includes/search.html" %}
 			  </div>
