Changed SPAT to NPACT everywhere (I believe)

--- a/spatweb/spatweb/templates/library.html
+++ b/spatweb/spatweb/templates/library.html
@@ -5,7 +5,7 @@
 
 {%block content %}
 <div class="contentPadding">
-  <h2>Existing S-Profile Analyses</h2>
+  <h2>Existing N-Profile Analyses</h2>
   <p>Here you can find already calculated s-profile analyses.</p>
   <p>
     <ul>
