--- a/spatweb/spatweb/templates/base.html
+++ b/spatweb/spatweb/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 	<body>
 		<div id="header">
-      <h1 id="dept"><a href="/">S-Profile Analysis Tool</a></h1>
+      <h1 id="dept"><a href="/">N-Profile Analysis Computational Tool</a></h1>
       <h2 id="uf"><a href="http://www.ufl.edu/">University of Florida<span></span></a></h2>
     </div>
 
@@ -39,7 +39,7 @@
           <h2>Primary Navigation</h2>
           <ul>
 				    <li id="active">Home</li>
-            <li><a href="{% url start %}">Run S-Profile Analysis</a></li>
+            <li><a href="{% url start %}">Run N-Profile Analysis</a></li>
             <li><a href="">Get the Source</a></li>
           </ul>
         </div>
