--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load media %}
-{% block title %}Run S-P.A.T.{% endblock %}
+{% block title %}Run N-P.A.C.T.{% endblock %}
 
 {% block addScript %}
 {% include_media 'jquery.js' %}
@@ -17,10 +17,10 @@
 
 {%block content %}
 <div class="contentPadding">
-  <h2>Run the S-Profile Analysis Tool</h2>
-  <p>From here you can run an S-Profile analysis. The process starts with a Genbank file (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a>).</p>
+  <h2>Run the N-Profile Analysis Computational Tool</h2>
+  <p>From here you can run a N-Profile analysis. The process starts with a Genbank file (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a>).</p>
 
-  <p>SPAT can process uploaded files, files fetched from a url, or
+  <p>NPACT can process uploaded files, files fetched from a url, or
     genbank data pasted directly in. Only one of the  following is neccessary</p>
 
 
